package PaooGame.Entity;

abstract class EntityFactory {
    abstract Entity createEntity(int x, int y);
}
